# tresor

./: .env  .gitignore  Cargo.toml  README.md
config/: debug.toml  default.toml
docker/: .gitignore  Dockerfile  build-docker.sh  run_docker.sh
local-testing/: docker-compose.yml  init.sh
local-testing/diesel-cli/: Dockerfile
local-testing/keycloak-config/: tresor.json
local-testing/sql_inits/: init-database.sql
migrations/2020-10-10-105928_create_secrets/: down.sql  up.sql
migrations/2020-11-22-181627_create_user_secret_join_table/: down.sql  up.sql
postman/: Tresor.postman_collection.json
src/: database.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  settings.rs
src/routes/: oidc.rs  tresor.rs
