[package]
name = "tresor_backend"
version = "0.1.0"
authors = ["rival <riccardovalentini1854@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
log = "0.4.0"
env_logger = "0.7.1"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
serde = "1.0"
futures = "0.3.5"
serde_json = "1.0"