[package]
name = "tresor_backend"
version = "0.1.0"
authors = ["rival <riccardovalentini1854@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10"
openssl = "0.10"
actix-web = "3"
actix-session = "0.4.0"
log = "0.4.0"
env_logger = "0.7.1"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
serde = "1.0"
futures = "0.3.5"
reqwest = "0.10.8"
openidconnect = { version = "1.0", features = ["futures-03", "reqwest-010"], default-features = false }
oauth2 = "3.0.0"
serde_json = "1.0"
